tests/incremental_haste_blacklist/incremental_haste_blacklist.exp

Initial status:
No errors!

Move A.js to B.js (blacklisted):
Error ------------------------------------------------------------- index.js:2:9

Cannot resolve module `A`.

Error: index.js:2
  2: require('A');
             ^^^ Cannot resolve module `A`.


Found 1 error

Move B.js to A.js:
No errors!

Done!
